# UniversalScrobbler

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  pubkey.txt  pyproject.toml  todo.md
api/: .env  alembic.ini  config.py  fuckme.py  main.py  pyproject.toml  settings.toml
api/dependencies/: auth.py  cover_art_archive_api.py  database.py  discogs_api.py  lidarr_api.py  listenbrainz_api.py  musicbrainz_api.py  redis.py
api/migrations/: env.py
api/migrations/versions/: 0b1eebecf821_add_playback_session_table.py  0fe4eea4193e_fixed_foreign_key_constrant.py  10f1f470c812_revamped_collection_model.py  13e81762529d_adding_formats.py  15beb045667b_added_track_filter_column.py  1b75f781daa8_added_collection_models.py  1dab07a29b09_added_styles.py  2c968b2a61c1_added_collection_models.py  329a3bf99a3f_added_umap_embeddings.py  353d5c5eda0b_added_collection_models.py  434e35d70b0b_add_playback_queue_table.py  46220d005e37_added_playbackhistory_session_id_for_.py  4746f569192b_adding_graph.py  4a7c5c23d9b8_update_marking_for_non_problem_rows.py  4c1622272f84_added_collection_models.py  5793cf619ae9_added_constraints.py  59cb67d75fd4_add_file_scan_cache_table.py  5a33bd400f7d_fix.py  5c105e2ee1ef_add_images_to_album.py  5c9b6eec8205_added_collection_models.py  63e2f1b8c3e7_added_spotify_token_to_user_model.py  655f986b20e5_adding_reduced_style_vectors.py  661a84acf8da_added_collection_models.py  6741246eac76_added_tags_and_genre.py  6b640c9f4d47_added_updated_at_datetime_aware_.py  7034daee8514_added_playbacksession_timestamps.py  735206db19a6_fix_fucking_timestamps.py  7810a8c2f054_adding_collectiontrack.py  78d6b7236a91_add_refreshtoken.py  7c974afc9105_added_album_type_field.py  7f3b0d2e89f2_add_graph_materialized_Views.py  7f85ca55c653_add_duration_to_collectiontrack.py  839f31d58ad4_remove_played_skipped_from_playbackqueue.py  8795c3c6a1d6_adding_similar_artist_table.py  893526e42826_added_flexible_mapping_table.py  8d12bf2e3f15_added_collection_models.py  8d396b31d9f6_simplified_playbackhistory.py  8d5b2e7c9a01_album_tag_genre_style_fingerprint.py  8d5b2e7c9a02_add_album_feature_sparse.py  8fd2f7dd01bd_added_collection_models.py  (+37 more)
api/models/: appmodels.py  sqlmodels.py
api/routers/: auth_router.py  collection.py  consumption.py  database.py  discogs.py  event.py  healtcheck.py  listen.py  music.py  playback_session.py  spotify.py  websocket.py
api/scripts/: 2_map_tag_to_styles.py  3_train_graph_embeddings.py  4_import_lastfm_history.py  5_generate_album_vectors.py  6_reduce_style_vector.py  build_flexible_tag_mapping.py  connect_helper.py  diff_clienthello.py  gather_playback.py  generate_umap_embeddings.py  import_collection.py  mercury_handshake.py  normalization.csv  proto_helper.py  remap_flexible_tags.py  rym_genre.csv  rym_style_mappings.py  spotify_shannon.py
api/scripts/protos/: ads_rules_inject_tracks_pb2.py  automix_rules_pb2.py  (+39 more)
api/services/: collection_service.py  connection_manager.py  device_service.py  discogs_service.py  listen_service.py  listenbrainz_service.py  music_service.py  musicbrainz_service.py  playback_history_service.py  playback_service.py  redis_sse_service.py  shared.py  spotify_service.py  websocket_service.py
(+45 files in other folders)
