[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["sorenkoelbaek <soren.iversen@lego.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
dynaconf = "^3.2.6"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pg8000 = "^1.31.2"
sqlmodel = "^0.0.22"
pydantic = {extras = ["email"], version = "^2.10.6"}
pytest = "^8.3.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.19"
bcrypt = "^4.2.1"
spotipy = "^2.25.1"
websockets = "^15.0.1"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
sse-starlette = "^2.2.1"
httpx = "^0.28.1"
requests-oauthlib = "^2.0.0"
rapidfuzz = "^3.13.0"
scipy = "^1.15.2"
umap = "^0.1.1"
tqdm = "^4.67.1"
sentence-transformers = "^4.1.0"
scikit-learn = "^1.6.1"
nltk = "^3.9.1"
pgvector = "^0.4.1"
torch-geometric = "^2.6.1"
torch = "2.6.0"
mmh3 = "^5.1.0"
mutagen = "^1.47.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.14.0"
aiosqlite = "^0.21.0"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.ruff.lint.pydocstyle]
convention = "google"
